DemoMyApp/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Advisor__c</fullName>
        <label>Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts_By_Advisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_Range__c</fullName>
        <description>Age Range from GMAT and other List Imports</description>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>18-22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29-32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33-40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>If(month(today()) &gt;= month( Birthdate ),
YEAR(today()) -YEAR(Birthdate),(YEAR(today()) -YEAR(Birthdate))-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agent_Email_Address__c</fullName>
        <label>Agent Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agent_Email__c</fullName>
        <label>Indirect Agent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alumnus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alumnus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Apply_Routing_Type__c</fullName>
        <label>Apply Routing</label>
        <picklist>
            <picklistValues>
                <fullName>Zip/Postal Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proximity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geocoded Proximity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <label>Day</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1950</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1951</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1952</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1953</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1954</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1955</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1956</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1957</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1958</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1959</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1960</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1961</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1962</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1963</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1964</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1965</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1966</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1967</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1968</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1969</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1970</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1971</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1972</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1973</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1974</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1975</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1976</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1977</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1978</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Block_Campaign_Newsletter_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Campaign &amp; Newsletter Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_Contact_Information_From_Students__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Contact Information From Students</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Block_User_Messages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block User Messages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brochure_send_date__c</fullName>
        <description>Date when brochure was sent by shipper</description>
        <label>Brochure send date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <picklist>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shanghai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments_or_Questions__c</fullName>
        <label>Comments or Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmation_Deadline__c</fullName>
        <label>Confirmation Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Us_Subject__c</fullName>
        <label>Contact Us Subject</label>
        <picklist>
            <picklistValues>
                <fullName>General Questions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One to One Consultation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Brochure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Of_Citizenship_Override__c</fullName>
        <label>Country Of Citizenship Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Of_Citizenship__c</fullName>
        <label>Nationality 2</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts (By Citizenship)</relationshipLabel>
        <relationshipName>Contacts_By_Citizenship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Of_Origin_Override__c</fullName>
        <label>Country Of Origin Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Of_Origin__c</fullName>
        <label>Nationality 1</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts (By Origin)</relationshipLabel>
        <relationshipName>Contacts_By_Origin</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Of_Residence_Name__c</fullName>
        <formula>Country_Of_Residence__r.Name</formula>
        <label>Country Of Residence: Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Of_Residence_Override__c</fullName>
        <inlineHelpText>If the country does not exist in the list please add the value in the text field provided.</inlineHelpText>
        <label>Country Of Residence Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Of_Residence__c</fullName>
        <inlineHelpText>In what country do you currently live?</inlineHelpText>
        <label>Country Of Residence</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts (By Residence)</relationshipLabel>
        <relationshipName>Contacts_By_Residence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Student?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth_Month__c</fullName>
        <label>Date Of Birth Month</label>
        <picklist>
            <picklistValues>
                <fullName>Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth_c__c</fullName>
        <inlineHelpText>The lead birth date will map to the contact birth date when converted, if the birth date does not exist please enter it in this field.</inlineHelpText>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_Objective__c</fullName>
        <label>Degree Objective</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name_Primary__c</fullName>
        <formula>Program_Primary__r.Department__r.Name</formula>
        <label>Department Name (Primary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name_Secondary__c</fullName>
        <formula>Program_Secondary__r.Department__r.Name</formula>
        <label>Department Name (Secondary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name_Third__c</fullName>
        <formula>Program_third__r.Department__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Name (Third)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Route__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Route?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Five_9_Formatted_Mobile_Phone_Number__c</fullName>
        <label>Five 9 Formatted Mobile Phone Number</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Five_9_Formatted_Phone_Number__c</fullName>
        <label>Five 9 Formatted Phone Number</label>
        <length>3900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMAT_Score__c</fullName>
        <inlineHelpText>GMAT Score from the Lead</inlineHelpText>
        <label>GMAT Score</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Area_Code__c</fullName>
        <label>Home Phone Area Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Composite__c</fullName>
        <formula>IF( ISBLANK( Home_Phone_Country_Code__c ) || ISBLANK( Home_Phone_Area_Code__c ) || ISBLANK( Home_Phone_Main_Number__c ) , null ,
Home_Phone_Country_Code__c + &apos;-&apos; + Home_Phone_Area_Code__c + &apos;-&apos; + Home_Phone_Main_Number__c
+ IF( ISBLANK( Home_Phone_Extension__c ) , null , &apos; x&apos; + Home_Phone_Extension__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone Composite</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Country_Code__c</fullName>
        <label>Primary Phone Country Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Extension__c</fullName>
        <label>Home Phone Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Main_Number__c</fullName>
        <label>Primary Phone Main Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirect_Agent_Name__c</fullName>
        <description>Lookup to Indirect Agent</description>
        <inlineHelpText>Lookup Indirect Agent</inlineHelpText>
        <label>Indirect Agent Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Indirect Agent</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interview_Date_Booked__c</fullName>
        <label>Interview Date Booked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Date__c</fullName>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interview_Status__c</fullName>
        <label>Interview Status</label>
        <picklist>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Applicant__c</fullName>
        <formula>IF(ISBLANK(Applicant_Email__c), &apos;No&apos;, &apos;Yes&apos;)</formula>
        <label>Is Applicant?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_English_Listening__c</fullName>
        <label>Language: English Listening</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_English_Reading__c</fullName>
        <label>Language: English Reading</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_English_Speaking__c</fullName>
        <label>Language: English Speaking</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_English_Writing__c</fullName>
        <label>Language: English Writing</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beginner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language_Other__c</fullName>
        <label>Language: Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <inlineHelpText>What is the primary language you speak? If you are fluent in English, please select it.</inlineHelpText>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awadhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijani, South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhojpuri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burmese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Gan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Hakka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Jinyu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Mandarin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Min Nan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Wu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Xiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese, Yue(Cantonese)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hausa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Javanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kannada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maithili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malayalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oriya</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Log_In__c</fullName>
        <label>Last Log In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <description>This field is mapped from the Lead and is intended to capture data when a Lead is converted.</description>
        <label>Lead Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_User_Supplied__c</fullName>
        <label>Lead Source (User-Supplied)</label>
        <picklist>
            <picklistValues>
                <fullName>banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Rankings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search engine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Youtube</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Stage__c</fullName>
        <description>This field is mapped from the Lead and is intended to capture data when a Lead is converted.</description>
        <label>Lead Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <description>This field is mapped from the Lead and is intended to capture data when a Lead is converted.</description>
        <label>Lead Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maiden_Name__c</fullName>
        <label>Maiden Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts (Mailing Country)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <label>TA Marketing Source</label>
        <picklist>
            <picklistValues>
                <fullName>Access &gt; MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AccessMBAprescheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIESEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>baidu.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cappex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ChaseDream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBlast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBlast Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EconomistOnlineFair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFBlast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EF Blasts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-fellows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience Hult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fb?utm_source=Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GETEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMASS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMASS-EFAMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMAT_Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hult Brochure request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iChat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Session</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview Event Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Area_Code__c</fullName>
        <label>Mobile Phone Area Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>